public interface PlaylistItem {
    String getName();
    void play(MediaPlayer player);
}
