public interface Renderer {
    void render(String streamToken);
}
