public interface MediaSource {
    String getId();
    String openStream();
}
